@@ -1,21 +1,28 @@
 package rpgcombat.game.modifier;
 
+import java.util.function.IntSupplier;
+
 import menu.model.MenuResult;
+import rpgcombat.achievements.AchievementSystem;
 import rpgcombat.balance.CombatBalanceRegistry;
 import rpgcombat.balance.config.character.BloodPactConfig;
 import rpgcombat.combat.models.Action;
+import rpgcombat.discovery.DiscoveryCategory;
+import rpgcombat.discovery.DiscoveryRuntime;
 import rpgcombat.game.modifier.ui.Messages;
+import rpgcombat.game.modifier.ultimate.UltimateActionEffect;
+import rpgcombat.game.modifier.ultimate.UltimateActionType;
 import rpgcombat.game.modifier.ui.Messages.CALL_SPIRITS;
 import rpgcombat.models.characters.Character;
 import rpgcombat.models.effects.Effect;
-import rpgcombat.models.effects.impl.MagicalTiredness;
-import rpgcombat.models.effects.impl.SpiritualCallingFlag;
+import rpgcombat.models.effects.impl.menu.MagicalTiredness;
+import rpgcombat.models.effects.impl.menu.SpiritualCallingFlag;
 import rpgcombat.utils.input.Menu;
 import rpgcombat.utils.rng.DivineCharismaAffinity;
 import rpgcombat.utils.rng.SpiritualCallingDie;
 import rpgcombat.utils.rng.SpiritualCallingDie.RollResult;
 import rpgcombat.utils.ui.Ansi;
-import rpgcombat.utils.ui.Cleaner;
+import rpgcombat.utils.ui.TerminalClear;
 import static rpgcombat.game.modifier.ui.Format.*;
 
 /**
@@ -26,19 +33,28 @@ import static rpgcombat.game.modifier.ui.Format.*;
  */
 public final class Actions {
 
-    /** Utilitat per netejar la consola abans de mostrar informació */
-    private static final Cleaner cleaner = new Cleaner();
-
     /** Configuració del sistema de Blood Pact extreta del registre de balanç */
     private static final BloodPactConfig bloodPactConfig = CombatBalanceRegistry.get().bloodPact();
 
     /** Nombre de torns de cooldown per a Spiritual Calling */
     private static final int SPIRITUAL_CALLING_COOLDOWN = 3;
 
+    /** Sistema opcional per registrar assoliments d'accions especials. */
+    private static AchievementSystem achievementSystem;
+
+    /** Proveïdor del número de ronda actual. */
+    private static IntSupplier roundSupplier = () -> 0;
+
     /**
      * Constructor privat per evitar la instanciació d'aquesta classe utilitària.
      */
     private Actions() {
+    }
+
+    /** Configura el seguiment opcional d'assoliments per a accions especials. */
+    public static void configureAchievementTracking(AchievementSystem system, IntSupplier supplier) {
+        achievementSystem = system;
+        roundSupplier = supplier == null ? () -> 0 : supplier;
     }
 
     /**
@@ -51,7 +67,17 @@ public final class Actions {
      * @return un {@link MenuResult} que indica continuar el bucle del menú
      */
     public static MenuResult<Action> spiritualCalling(Character player) {
-        cleaner.clear();
+        TerminalClear.clearShared();
+
+        if (!player.specialActionsEnabled()) {
+            cannotUseSpecialActionsInThisMode();
+            return MenuResult.repeatLoop();
+        }
+
+        if (player.hasSpecialMenuActionUsedThisTurn()) {
+            cannotCombineSpecialActions();
+            return MenuResult.repeatLoop();
+        }
 
         if (!player.hasEffect(SpiritualCallingFlag.INTERNAL_EFFECT_KEY)) {
             cannotUseSpiritualCalling();
@@ -65,6 +91,7 @@ public final class Actions {
         }
 
         effect.use();
+        player.markSpecialMenuActionUsedThisTurn();
 
         CALL_SPIRITS.CALL_INIT.print();
 
@@ -87,6 +114,8 @@ public final class Actions {
 
         player.getStatistics().heal(healAmount);
         player.setSpiritualCallingCooldown(SPIRITUAL_CALLING_COOLDOWN);
+        DiscoveryRuntime.discover(DiscoveryCategory.ACTIONS, "SPIRITUAL_CALLING");
+        registerSpiritualCalling(player, face, percentage, healAmount);
 
         System.out.println();
         CALL_SPIRITS.classifyShot(face).print();
@@ -115,7 +144,17 @@ public final class Actions {
      * @return un {@link MenuResult} que indica continuar el bucle del menú
      */
     public static MenuResult<Action> bloodPact(Character player) {
-        cleaner.clear();
+        TerminalClear.clearShared();
+
+        if (!player.specialActionsEnabled()) {
+            cannotUseSpecialActionsInThisMode();
+            return MenuResult.repeatLoop();
+        }
+
+        if (player.hasSpecialMenuActionUsedThisTurn()) {
+            cannotCombineSpecialActions();
+            return MenuResult.repeatLoop();
+        }
 
         Effect e = player.getEffect(MagicalTiredness.INTERNAL_EFFECT_KEY);
         MagicalTiredness magicalTiredness = (MagicalTiredness) e;
@@ -128,13 +167,79 @@ public final class Actions {
         }
 
         magicalTiredness.use();
+        player.markSpecialMenuActionUsedThisTurn();
 
         Messages.BLOOD_PACT.USE_BLOOD_PACT.print();
-        useBloodPact(player);
+        BloodPactResult result = useBloodPact(player);
+        DiscoveryRuntime.discover(DiscoveryCategory.ACTIONS, "BLOOD_PACT");
+        registerBloodPact(player, result);
 
         System.out.println();
         Menu.pause();
         return MenuResult.repeatLoop();
+    }
+
+    /** Activa la ulti màgica de segona etapa. */
+    public static MenuResult<Action> arcaneOverload(Character player) {
+        return useUltimate(player, UltimateActionType.ARCANE_OVERLOAD);
+    }
+
+    /** Activa la ulti física de segona etapa. */
+    public static MenuResult<Action> colossalBreak(Character player) {
+        return useUltimate(player, UltimateActionType.COLOSSAL_BREAK);
+    }
+
+    /** Activa la ulti èlfica de rang de segona etapa. */
+    public static MenuResult<Action> elvenOpeningShot(Character player) {
+        return useUltimate(player, UltimateActionType.ELVEN_OPENING_SHOT);
+    }
+
+    /** Executa la lògica comuna d'activació d'una ulti. */
+    private static MenuResult<Action> useUltimate(Character player, UltimateActionType type) {
+        TerminalClear.clearShared();
+
+        if (!player.specialActionsEnabled()) {
+            cannotUseSpecialActionsInThisMode();
+            return MenuResult.repeatLoop();
+        }
+
+        if (!UltimateActionEffect.canActivate(player, type)) {
+            Messages.ULTIMATE.CANNOT_USE.print();
+            System.out.println();
+            Menu.pause();
+            return MenuResult.repeatLoop();
+        }
+
+        boolean activated = UltimateActionEffect.activate(player, type);
+        if (!activated) {
+            Messages.ULTIMATE.CHARGE_FAILS.print();
+            System.out.println();
+            Menu.pause();
+            return MenuResult.repeatLoop();
+        }
+
+        DiscoveryRuntime.discover(DiscoveryCategory.ACTIONS, type.discoveryId());
+        registerUltimate(player, type);
+
+        Messages.ULTIMATE.releaseFor(type).print();
+        Messages.ULTIMATE.PRICE_PAID.print();
+        System.out.println();
+        Menu.pause();
+        return MenuResult.returnValue(Action.ATTACK);
+    }
+
+    /** Mostra que no es poden encadenar accions especials de menú en el mateix torn. */
+    private static void cannotCombineSpecialActions() {
+        Messages.ULTIMATE.CANNOT_COMBINE.print();
+        System.out.println();
+        Menu.pause();
+    }
+
+    /** Mostra que el mode actual no permet accions especials. */
+    private static void cannotUseSpecialActionsInThisMode() {
+        System.out.println("Aquest mode de joc no permet accions especials.");
+        System.out.println();
+        Menu.pause();
     }
 
     /**
@@ -145,14 +250,19 @@ public final class Actions {
      *
      * @param player el personatge afectat pel pacte
      */
-    private static void useBloodPact(Character player) {
+    private static BloodPactResult useBloodPact(Character player) {
         double maxMana = player.getStatistics().getMaxMana();
         double currentMana = player.getStatistics().getMana();
+        double maxHp = player.getStatistics().getMaxHealth();
+        double currentHp = player.getStatistics().getHealth();
+        double hpBeforePercent = percent(currentHp, maxHp);
+        double manaBeforePercent = percent(currentMana, maxMana);
         double missingMana = Math.max(0, maxMana - currentMana);
 
         if (missingMana <= 0) {
             Messages.BLOOD_PACT.MANA_ALREADY_FULL.print();
-            return;
+            return new BloodPactResult(0.0, 0.0, 0.0, hpBeforePercent, hpBeforePercent,
+                    manaBeforePercent, manaBeforePercent);
         }
 
         double hpCostPercent = bloodPactHpCostPercent(player);
@@ -160,11 +270,12 @@ public final class Actions {
         double scaling = 1.0 + (missingMana / maxMana) * 0.5;
         double hpCost = missingMana * hpCostPercent * scaling;
 
-        double currentHp = player.getStatistics().getHealth();
-        hpCost = Math.clamp(hpCost, 0, currentHp - 1);
+        hpCost = Math.min(Math.max(0.0, hpCost), Math.max(0.0, currentHp - 1.0));
 
         player.getStatistics().restoreMana(missingMana);
         player.getStatistics().damage(hpCost);
+        double hpAfterPercent = percent(player.getStatistics().getHealth(), maxHp);
+        double manaAfterPercent = percent(player.getStatistics().getMana(), maxMana);
 
         System.out.println();
         System.out.println("  " + Ansi.GREEN + "+" + Ansi.RESET + " "
@@ -181,6 +292,39 @@ public final class Actions {
                 + " del mana restaurat.");
 
         printBloodPactBars(player);
+        return new BloodPactResult(missingMana, hpCost, hpCostPercent, hpBeforePercent, hpAfterPercent,
+                manaBeforePercent, manaAfterPercent);
+    }
+
+    /** Registra l'acció de Crida Espiritual al sistema d'assoliments, si existeix. */
+    private static void registerSpiritualCalling(Character player, int face, double percentage, double healAmount) {
+        if (achievementSystem == null) return;
+        achievementSystem.onSpiritualCallingUsed(player, face, percentage, healAmount, roundSupplier.getAsInt());
+    }
+
+    /** Registra l'acció de Pacte de Sang al sistema d'assoliments, si existeix. */
+    private static void registerBloodPact(Character player, BloodPactResult result) {
+        if (achievementSystem == null || result == null) return;
+        achievementSystem.onBloodPactUsed(player, result.manaRestored(), result.hpCost(),
+                result.hpCostPercent(), result.hpBeforePercent(), result.hpAfterPercent(),
+                result.manaBeforePercent(), result.manaAfterPercent(), roundSupplier.getAsInt());
+    }
+
+    /** Registra l'ús d'una ulti de segona etapa. */
+    private static void registerUltimate(Character player, UltimateActionType type) {
+        if (achievementSystem == null || type == null) return;
+        achievementSystem.onUltimateUsed(player, type.discoveryId(), type.label(), type.weaponType().name(),
+                roundSupplier.getAsInt());
+    }
+
+    /** Resultat intern del Pacte de Sang per alimentar assoliments. */
+    private record BloodPactResult(double manaRestored, double hpCost, double hpCostPercent,
+            double hpBeforePercent, double hpAfterPercent, double manaBeforePercent, double manaAfterPercent) {}
+
+    /** Calcula un percentatge segur per a metadades d'assoliments. */
+    private static double percent(double value, double max) {
+        if (max <= 0.0) return 0.0;
+        return Math.clamp((value / max) * 100.0, 0.0, 100.0);
     }
 
     /**
